# recipe-reel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.rocm  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
app/: __init__.py  config.py  main.py  worker.py
app/api/: routes_captcha.py  routes_health.py  routes_jobs.py  routes_recipes.py
app/models/: __init__.py  enums.py  job.py  recipe.py
app/services/: audio.py  captcha.py  frames.py  ingest.py  pipeline.py  postprocess.py  types.py
app/services/synthesize/: __init__.py  base.py  mock.py  openai_compat.py  prompts.py
app/services/transcribe/: __init__.py  base.py  mock.py  whisper_local.py
app/services/vision/: __init__.py  base.py  fireworks.py  local_vlm.py  mock.py
app/store/: __init__.py  store.py
app/utils/: hardware.py
docs/: ARCHITECTURE.md  SUBMISSION.md  cover.html  demo-video-script.md  pitch-deck.html  submission-copy.md  test-videos.md
docs/examples/: recipe-from-youtube.json  recipe.json  recipe.schema-org.json
fixtures/: sample_recipe.json  sample_transcript.json  sample_vision.json
notebooks/: amd_recipereel_demo.ipynb
scripts/: demo.sh  serve_amd_gemma.sh
tests/: conftest.py  test_api.py  test_ingest.py  test_models.py  test_pipeline_mock.py
web/: README.md  index.html
web/assets/: app.css  app.js  data.js
